Closes #2509: New notifications UI

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -311,6 +311,14 @@ notification.checksumfail=Co najmniej jeden z przes\u0142anych plik\u00F3w nie p
 notification.mail.import.filesystem=Zbi\u00F3r danych {2} ({0}/dataset.xhtml?persistentId={1}) zosta\u0142 pomy\u015Blnie przes\u0142any i sprawdzony.
 notification.import.filesystem=Zbi\u00F3r danych <a href="/dataset.xhtml?persistentId={0}" title="{1}">{1}</a> zosta\u0142 pomy\u015Blnie przes\u0142any i sprawdzony.
 notification.import.checksum=Do plik\u00F3w w zbiorze danych <a href="/dataset.xhtml?persistentId={0}" title="{1}">{1}</a> dodano sumy kontrolne przez zadanie asynchroniczne.
+notification.table.column.detail=Szczeg\u00F3\u0142y powiadomienia
+notification.table.column.sendDate=Stworzony
+notification.deleteSelected.btn=Usu\u0144 wybrane
+notification.deleteSelected=Delete notifications
+notification.deleteSelected.info=The notification(s) will be deleted after you click on the Delete button.
+notification.numSelected=Obecnie wybrano {0} {0,choice,0#powiadomie\u0144|1#powiadomienie|2#powiadomie\u0144}
+notification.selectAll=Wybierz wszystkie powiadomienia
+notification.clearSelection=Wyczy\u015B\u0107 wyb\u00F3r
 removeNotification=Usu\u0144 powiadomienie
 groupAndRoles.manageTips=Tu masz dost\u0119p do wszystkich grup, do kt\u00F3rych nale\u017Cysz i do przydzielonych Ci r\u00F3l, oraz mo\u017Cliwo\u015B\u0107 zarz\u0105dzania nimi.
 user.message.signup.label=Za\u0142\u00F3\u017C konto
