--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -311,6 +311,14 @@ notification.checksumfail=One or more files in your upload failed checksum valid
 notification.mail.import.filesystem=Dataset {2} ({0}/dataset.xhtml?persistentId={1}) has been successfully uploaded and verified.
 notification.import.filesystem=Dataset <a href="/dataset.xhtml?persistentId={0}" title="{1}">{1}</a> has been successfully uploaded and verified.
 notification.import.checksum=<a href="/dataset.xhtml?persistentId={0}" title="{1}">{1}</a>, dataset had file checksums added via a batch job.
+notification.table.column.detail=Notification details
+notification.table.column.sendDate=Created
+notification.deleteSelected.btn=Delete selected
+notification.deleteSelected=Delete notifications
+notification.deleteSelected.info=The notification(s) will be deleted after you click on the Delete button.
+notification.numSelected={0} {0, choice, 0#notifications are|1#notification is|2#notifications are} currently selected.
+notification.selectAll=Select all {0} notifications
+notification.clearSelection=Clear selection.
 removeNotification=Remove Notification
 groupAndRoles.manageTips=Here is where you can access and manage all the groups you belong to, and the roles you have been assigned.
 user.message.signup.label=Create Account
