--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -313,13 +313,15 @@ notification.import.filesystem=Zbi\u00F3r danych <a href="/dataset.xhtml?persist
 notification.import.checksum=Do plik\u00F3w w zbiorze danych <a href="/dataset.xhtml?persistentId={0}" title="{1}">{1}</a> dodano sumy kontrolne przez zadanie asynchroniczne.
 notification.table.column.detail=Szczeg\u00F3\u0142y powiadomienia
 notification.table.column.sendDate=Stworzony
+notification.table.recordsPerPage.title=Rekord\u00F3w na stron\u0119
+notification.table.empty.message=Nie znaleziono \u017Cadnych powiadomie\u0144
+notification.table.searchTerm.watermark=Przefiltruj powiadomienia\u2026
 notification.deleteSelected.btn=Usu\u0144 wybrane
 notification.deleteSelected=Delete notifications
 notification.deleteSelected.info=The notification(s) will be deleted after you click on the Delete button.
 notification.numSelected=Obecnie wybrano {0} {0,choice,0#powiadomie\u0144|1#powiadomienie|2#powiadomie\u0144}
 notification.selectAll=Wybierz wszystkie powiadomienia
 notification.clearSelection=Wyczy\u015B\u0107 wyb\u00F3r
-removeNotification=Usu\u0144 powiadomienie
 groupAndRoles.manageTips=Tu masz dost\u0119p do wszystkich grup, do kt\u00F3rych nale\u017Cysz i do przydzielonych Ci r\u00F3l, oraz mo\u017Cliwo\u015B\u0107 zarz\u0105dzania nimi.
 user.message.signup.label=Za\u0142\u00F3\u017C konto
 user.message.signup.tip=Maj\u0105c konto w repozytorium mo\u017Cesz za\u0142o\u017Cy\u0107 w\u0142asn\u0105 kolekcj\u0119, dodawa\u0107 zbiory danych i prosi\u0107 o dost\u0119p do zastrze\u017Conych plik\u00F3w.
