--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -317,8 +317,8 @@ notification.table.recordsPerPage.title=Rekord\u00F3w na stron\u0119
 notification.table.empty.message=Nie znaleziono \u017Cadnych powiadomie\u0144
 notification.table.searchTerm.watermark=Przefiltruj powiadomienia\u2026
 notification.deleteSelected.btn=Usu\u0144 wybrane
-notification.deleteSelected=Delete notifications
-notification.deleteSelected.info=The notification(s) will be deleted after you click on the Delete button.
+notification.deleteSelected=Usu\u0144 powiadomienia
+notification.deleteSelected.info=Powiadomienia zostan\u0105 usuni\u0119ty po naci\u015Bni\u0119ciu przycisku "Usu\u0144".
 notification.numSelected=Obecnie wybrano {0} {0,choice,0#powiadomie\u0144|1#powiadomienie|2#powiadomie\u0144}
 notification.selectAll=Wybierz wszystkie powiadomienia
 notification.clearSelection=Wyczy\u015B\u0107 wyb\u00F3r
