Closes #2526: Adjust pl translation

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2334,8 +2334,8 @@ mydataFragment.errorMessage.NoUserSelected=Przykro mi! U\u017Cytkownik nie zosta
 mydataFragment.errorMessage.UnknownType.Prefix=Przykro mi!  Typ '
 mydataFragment.errorMessage.UnknownType.Suffix=' jest nieznany.
 
-file.provenance=Pochodzenie
-file.editProvenanceDialog=Pochodzenie
+file.provenance=Proweniencja
+file.editProvenanceDialog=Proweniencja
 file.editProvenanceDialog.tip=Proweniencja to zapis \u017Ar\u00F3d\u0142a Twojego pliku danych i wszelkich transformacji, jakie przeszed\u0142. Prze\u015Blij plik JSON z narz\u0119dzia do przechwytywania proweniencji w celu wygenerowania grafu proweniencji swoich danych. Wi\u0119cej informacji mo\u017Cna znale\u017A\u0107 w <a href="{0}/{1}/user/index.html" title="Dataverse User Guide" target="_blank">Podr\u0119czniku u\u017Cytkownika</a>.
 file.editProvenanceDialog.upload.invalidFile=Nie mo\u017Cna przes\u0142a\u0107 pliku. Spr\u00F3buj ponownie u\u017Cywaj\u0105c pliku w formacie JSON.
 file.editProvenanceDialog.uploadSuccess=Przesy\u0142anie uko\u0144czone
@@ -2344,7 +2344,7 @@ file.editProvenanceDialog.noEntitiesError=Przes\u0142any plik z rejestrem prowen
 file.editProvenanceDialog.invalidSchemaError=Przes\u0142any plik z rejestrem proweniencji nie jest zgodny ze standardem PROV W3C.
 file.editProvenanceDialog.bundleFile=Plik z rejestrem proweniencji
 file.editProvenanceDialog.bundleFile.instructions=Plik musi by\u0107 w formacie JSON i spe\u0142nia\u0107 wymogi <a href="https://www.w3.org/Submission/2013/SUBM-prov-json-20130424/" target="_blank">standardu W3C</a>.
-file.editProvenanceDialog.bundleFile.alreadyPublished=Ten plik z rejestrem pochodzenia zosta\u0142 opublikowany i nie mo\u017Cna go zast\u0105pi\u0107 ani usun\u0105\u0107.
+file.editProvenanceDialog.bundleFile.alreadyPublished=Ten plik z rejestrem proweniencji zosta\u0142 opublikowany i nie mo\u017Cna go zast\u0105pi\u0107 ani usun\u0105\u0107.
 file.editProvenanceDialog.bundleEntity=Jednostka (entity) pliku danych
 file.editProvenanceDialog.bundleEntity.placeholder=Po\u0142\u0105cz jednostk\u0119 (entity)\u2026
 file.editProvenanceDialog.bundleEntity.requiredValidation=Warto\u015B\u0107 jest wymagana
@@ -2354,10 +2354,10 @@ file.editProvenanceDialog.bundleEntity.typeHeader=Typ
 file.editProvenanceDialog.bundleEntity.entityHeader=Jednostka (entity)
 file.editProvenanceDialog.selectToAddBtn=Wybierz plik
 file.editProvenanceDialog.description.tip=Mo\u017Cesz r\u00F3wnie\u017C doda\u0107 dokumentacj\u0119 historii Twojego pliku danych, zawieraj\u0105c\u0105 informacje o tym, jak powsta\u0142, jak si\u0119 zmienia\u0142 i kto nad nim pracowa\u0142.
-file.editProvenanceDialog.description=Opis pochodzenia
-file.editProvenanceDialog.description.placeholder=Dodaj opis pochodzenia
-file.confirmProvenanceDialog=Pochodzenie
-file.confirmProvenanceDialog.tip1=Po opublikowaniu tego pliku danych, Twojego pliku z rejestrem pochodzenia nie b\u0119dzie mo\u017Cna edytowa\u0107, ani zast\u0105pi\u0107.
+file.editProvenanceDialog.description=Opis proweniencji
+file.editProvenanceDialog.description.placeholder=Dodaj opis proweniencji
+file.confirmProvenanceDialog=Proweniencja
+file.confirmProvenanceDialog.tip1=Po opublikowaniu tego pliku danych, Twojego pliku z rejestrem proweniencji nie b\u0119dzie mo\u017Cna edytowa\u0107, ani zast\u0105pi\u0107.
 file.confirmProvenanceDialog.tip2=Wybierz "Anuluj" by powr\u00F3ci\u0107 do poprzedniej strony, gdzie mo\u017Cesz obejrze\u0107 podgl\u0105d swojego pliku z rejestrem proweniencji, by potwierdzi\u0107 jego poprawno\u015B\u0107.
 file.metadataTab.provenance.header=Proweniencja pliku
 file.metadataTab.provenance.body=Informacja o proweniencji pliku, kt\u00F3ra pojawi si\u0119 w p\u00F3\u017Aniejszej wersji\u2026
@@ -2370,8 +2370,8 @@ file.provConfirm.empty=Nie dokonano \u017Cadnych zmian.
 file.provAlert.published.json=Zmiany w Twoim pliku z rejestrem proweniencji zosta\u0142y zapisane w zbiorze danych.
 file.provAlert.unpublished.json=Zmiany w Twoim pliku z rejestrem proweniencji zostan\u0105 zapisane w tej wersji zbioru danych po naci\u015Bni\u0119ciu przycisku "Zapisz zmiany".
 file.provAlert.freeform=Zmiany w opisie proweniencji zostan\u0105 zapisane w tej wersji zbioru danych po naci\u015Bni\u0119ciu przycisku "Zapisz zmiany".
-file.provAlert.filePage.published.json=Zmiany w Twoim pliku z rejestrem pochodzenia zosta\u0142y zapisane w zbiorze danych.
-file.provAlert.filePage.unpublished.json=Zmiany w Twoim pliku z rejestrem pochodzenia zosta\u0142y zapisane w tej wersji zbioru danych.
+file.provAlert.filePage.published.json=Zmiany w Twoim pliku z rejestrem proweniencji zosta\u0142y zapisane w zbiorze danych.
+file.provAlert.filePage.unpublished.json=Zmiany w Twoim pliku z rejestrem proweniencji zosta\u0142y zapisane w tej wersji zbioru danych.
 file.provAlert.filePage.freeform=Zmiany w opisie proweniencji zosta\u0142y zapisane w tej wersji zbioru danych.
 
 api.prov.provJsonSaved=Zapisano rejestr proweniencji PROV-JSON dla pliku danych:
