Closes #2533: Allow to uningest multiple files at once

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3078,7 +3078,8 @@ uningest.table.unf=UNF of ingested file
 uningest.table.actions=Action
 uningest.table.uningest.button=Uningest
 uningest.dialog.title=Confirm uningest
-uningest.dialog.text=Do you really want to uningest the file named "{0}"?
+uningest.dialog.text=Do you really want to uningest the selected files?
+uningest.error=Could not uningest the following files
 
 add.dataset.button=Add dataset
 add.dataset.dialog.header=Select dataverse
