--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -3029,7 +3029,8 @@ uningest.table.unf=UNF zanalizowanego pliku
 uningest.table.actions=Akcje
 uningest.table.uningest.button=Cofnij analiz\u0119
 uningest.dialog.title=Potwierd\u017A cofni\u0119cie analizy
-uningest.dialog.text=Czy na pewno chcesz cofn\u0105\u0107 analiz\u0119 pliku o nazwie "{0}"?
+uningest.dialog.text=Czy na pewno chcesz cofn\u0105\u0107 analiz\u0119 dla zaznaczonych plik\u00F3w?
+uningest.error=Nie uda\u0142o si\u0119 cofn\u0105\u0107 analiz\u0119 dla nast\u0119puj\u0105cych plik\u00F3w
 
 add.dataset.button=Dodaj zbi\u00F3r danych
 add.dataset.dialog.header=Wybierz kolekcj\u0119
