Closes #2505: Allow to move multiple datasets at once

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2973,6 +2973,7 @@ dashboard.datamove.confirm.dialog=Are you sure you want to move this dataset?
 dashboard.datamove.confirm.yes=Yes, Move Dataset
 dashboard.datamove.confirm.force=Force Move
 dashboard.datamove.dataset.message.success=The dataset "{0}" ({1}) has been successfully moved to "{2}" dataverse.
+dashboard.datamove.dataset.message.success.multiple=The datasets ({0}) have been successfully moved to "{1}" dataverse.<br>
 dashboard.datamove.dataset.message.failure.summary=Failed to move dataset.
 dashboard.datamove.dataset.message.failure.details=The dataset "{0}" ({1}) could not be moved to "{2}" dataverse.<br>{3}<br>{4}<br>
 dashboard.datamove.dataverse.placeholder=Enter Dataverse Identifier\u2026
