--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -319,7 +319,7 @@ notification.table.searchTerm.watermark=Przefiltruj powiadomienia\u2026
 notification.deleteSelected.btn=Usu\u0144 wybrane
 notification.deleteSelected=Usu\u0144 powiadomienia
 notification.deleteSelected.info=Powiadomienia zostan\u0105 usuni\u0119ty po naci\u015Bni\u0119ciu przycisku "Usu\u0144".
-notification.numSelected=Obecnie wybrano {0} {0,choice,0#powiadomie\u0144|1#powiadomienie|2#powiadomie\u0144}
+notification.numSelected=Obecnie wybrano {0} {0,choice,0#powiadomie\u0144|1#powiadomienie|2#powiadomienia|3#powiadomienia|4#powiadomienia|5#powiadomie\u0144}
 notification.selectAll=Wybierz wszystkie powiadomienia
 notification.clearSelection=Wyczy\u015B\u0107 wyb\u00F3r
 groupAndRoles.manageTips=Tu masz dost\u0119p do wszystkich grup, do kt\u00F3rych nale\u017Cysz i do przydzielonych Ci r\u00F3l, oraz mo\u017Cliwo\u015B\u0107 zarz\u0105dzania nimi.
