Closes #2554: Generalize Suggestion box to support controlled vocabulary values
Co-authored-by: Sylwester Niewczas <sniewcza@icm.edu.pl>
Co-authored-by: Krzysztof Mądry <k.madry@icm.edu.pl>
Co-authored-by: Filipe Dias Lewandowski
Signed-off-by: Daniel Korbel <dkorbel@icm.edu.pl>

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3109,3 +3109,4 @@ geobox.invalid.latitude=The latitude must be a number between -90 and 90.
 geobox.invalid.latitude.relation=The north latitude must be greater or equal to the south latitude.
 
 validation.nonunique=The field must have a unique value.
+validation.value.not.allowed.in.controlled.vocabulary=Value "{0}" is not allowed. Please select one from the list.
