Closes #2548: maven release configuration

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -162,7 +162,7 @@ footer.dataverseProject=The Dataverse Project
 footer.repod=RepOD
 footer.basedOn=based on
 footer.dataverse=Dataverse
-footer.dataverse.version=4.11.
+footer.dataverse.version=@project.version@
 footer.privacyPolicy.link.name=Privacy Policy
 footer.termsOfUse.link.name=Terms of Use
 footer.accessibility.link.name=Accessibility
