--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -162,7 +162,7 @@ footer.dataverseProject=The Dataverse Project
 footer.repod=RepOD
 footer.basedOn=based on
 footer.dataverse=Dataverse
-footer.dataverse.version=4.11.
+footer.dataverse.version=@project.version@
 footer.privacyPolicy.link.name=Polityka prywatno\u015Bci
 footer.termsOfUse.link.name=Regulamin serwisu
 footer.accessibility.link.name=Deklaracja dost\u0119pno\u015Bci
