Closes #2563: Bring back removed properties

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1832,6 +1832,8 @@ file.unrestrict=Unrestrict
 file.restricted.success=Files "{0}" will be restricted once you click on the Save Changes button.
 file.download.header=Download
 file.download.dataset=Download all
+file.download.dataset.original=Original Format
+file.download.dataset.tabular=Archival Format (.tab)
 file.download.dataset.zip=Download all files as a ZIP archive
 file.download.dataset.zip.original=Download all files as a ZIP archive (original format)
 file.download.dataset.zip.tabular=Download all files as a ZIP archive (format .tab)
