--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1812,6 +1812,8 @@ file.unrestrict=Usu\u0144 zastrze\u017Cenie dost\u0119pu
 file.restricted.success=Pliki \u201D{0}\u201D zostan\u0105 zastrze\u017Cone po naci\u015Bni\u0119ciu na przycisk "Zapisz zmiany".
 file.download.header=Pobierz
 file.download.dataset=Pobierz wszystkie
+file.download.dataset.original=Format pierwotny
+file.download.dataset.tabular=Format archiwalny (.tab)
 file.download.dataset.zip=Pobierz wszystkie pliki jako archiwum ZIP
 file.download.dataset.zip.original=Pobierz wszystkie pliki jako archiwum ZIP (format pierwotny)
 file.download.dataset.zip.tabular=Pobierz wszystkie pliki jako archiwum ZIP (format .tab)
