Adjust bundle property texts

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -210,13 +210,13 @@ messages.validation=Validation Error
 messages.validation.msg=Required fields were missed or there was a validation error. Please scroll down to see details.
 
 # contactFormFragment.xhtml
-contact.header=Contact {0}
-contact.dataverse.header=Email Dataverse Contact
-contact.dataset.header=Email Dataset Contact
+contact.header=Contact the Repository''s Support
+contact.dataverse.header=Send E-mail
+contact.dataset.header=Send E-mail
 contact.to=To
-contact.to.option.dataset=contact person for matters relating to this dataset - a person with factual knowledge of the data contained in this dataset
-contact.to.option.dataverse=contact person for matters relating to the collection where this dataset was deposited
-contact.to.option.repo={0} repository support team
+contact.to.option.dataset=Contact person for this dataset, having substantive knowledge of the data
+contact.to.option.dataverse=Contact person for this dataverse
+contact.to.option.repo={0} repository support
 contact.support=Support
 contact.sender=Sender's E-mail
 contact.sender.required=Sender's E-mail is required.
