--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -210,13 +210,13 @@ messages.validation=B\u0142\u0105d walidacji
 messages.validation.msg=Pomini\u0119to wymagane pola lub wyst\u0105pi\u0142 b\u0142\u0105d walidacji. Przewi\u0144 w d\u00F3\u0142 by zobaczy\u0107 szczeg\u00F3\u0142owe informacje.
 
 # contactFormFragment.xhtml
-contact.header=Skontaktuj si\u0119 z {0}
-contact.dataverse.header=Wy\u015Blij e-mail do osoby do kontaktu w sprawie tej kolekcji
-contact.dataset.header=Wy\u015Blij e-mail do osoby do kontaktu w sprawie tego zbioru danych
+contact.header=Skontaktuj si\u0119 z zespo?em pomocy repozytorium
+contact.dataverse.header=Wy\u015Blij e-mail
+contact.dataset.header=Wy\u015Blij e-mail
 contact.to=Do
-contact.to.option.dataset=osoba do kontaktu w sprawach dotycz\u0105cych tego zbioru danych - osoba dysponuj\u0105ca merytoryczn\u0105 wiedz\u0105 na temat danych zawartych w tym zbiorze
-contact.to.option.dataverse=osoba do kontaktu w sprawach dotycz\u0105cych kolekcji, w kt\u00F3rej zdeponowano ten zbi\u00F3r danych
-contact.to.option.repo=zesp\u00F3\u0142 pomocy repozytorium {0}
+contact.to.option.dataset=Osoba do kontaktu w sprawie tego zbioru danych, dysponuj\u0105ca merytoryczn\u0105 wiedz\u0105 na jego temat
+contact.to.option.dataverse=Osoba do kontaktu w sprawie tej kolekcji
+contact.to.option.repo=Zesp\u00F3\u0142 pomocy repozytorium {0}
 contact.support=Pomoc
 contact.sender=E-mail nadawcy
 contact.sender.required=E-mail nadawcy jest wymagany.
